syntax = "proto3";

package tankspb;

import "pkg/channeldpb/unity_common.proto";

option go_package = "channeld.clewcat.com/examples/unity-mirror-tanks/tankspb";
option csharp_namespace = "Channeld.Examples.Tanks";

message TankState {
    // Marks that the state should be removed from tankStates map
    bool removed = 1;
    int32 health = 2;
    bool isAI = 3;
}

message TankGameChannelData {
    map<uint32, channeldpb.TransformState> transformStates = 1;
    map<uint32, TankState> tankStates = 2;
}