syntax = "proto3";

package channeldpb;

option go_package = "channeld.clewcat.com/channeld/pkg/channeldpb";
option csharp_namespace = "Channeld";

message Vector3f {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Vector4f {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message TransformState {
    // Marks that the state should be removed from the containing map
    bool removed = 1;
    Vector3f position = 2;
    Vector4f rotation = 3;
    Vector3f scale = 4; 
}